<resources>
    <string name="app_name">Pets</string>
    <string name="pet_details_title">Pet Details</string>

    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="type">Type</string>

    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="address">Address</string>
    <string name="website">Pet\'s Website</string>

</resources>